src/FinancialForce Accounting/objects/codaIntercompanyDefinition__c.object
<CustomObject>
    <customHelpPage>codahelpintercompanydefinition</customHelpPage>
    <description>Defines the intercompany control accounts that you want to use when generating and posting  intercompany journals.</description>
    <fields>
        <fullName>AutoPost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DestinationDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Destination Dimension 1)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DestinationDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Destination Dimension 2)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DestinationDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Destination Dimension 3)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DestinationDocumentBankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Document Bank Account</label>
        <referenceTo>codaBankAccount__c</referenceTo>
        <relationshipLabel>Intercompany Definitions</relationshipLabel>
        <relationshipName>IntercompanyDefinitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Intercompany Definitions</relationshipLabel>
        <relationshipName>IntercompanyDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReceivingControlAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounts Payable GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Accounts Payable GLA)</relationshipLabel>
        <relationshipName>Intercompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Related Company)</relationshipLabel>
        <relationshipName>IntercompanyDefinitionsRelatedCompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SendingControlAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounts Receivable GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Accounts Receivable GLA)</relationshipLabel>
        <relationshipName>Intercompany1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Source Dimension 1)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Source Dimension 2)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Source Dimension 3)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Intercompany Definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OwnerCompany__c</columns>
        <columns>RelatedCompany__c</columns>
        <columns>ReceivingControlAccount__c</columns>
        <columns>SendingControlAccount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ICD{000000}</displayFormat>
        <label>Intercompany Definition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intercompany Definitions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>